--- a/css/style.css
+++ b/css/style.css
@@ -1,181 +1,357 @@
-/*BASIC*/
-body {
-	margin: 0;
-	padding: 0;
-}
-
-button {
-	width: 100px;
-	border: 1px solid white;
-	padding: 19px 10px;
-	outline: none;
-	background: transparent;
-	border-radius: 10px;
-	cursor: pointer;
-}
-
-button a {
-
-	text-decoration: none;
-	font-size: 11px;
-	border-radius: 40px;
-	color: black;
-}
-
-button:hover {
-	transition: 0.4s;
-	border-radius: 0%;
-}
-
-
-
-.font{
-
-	font-family: "OpenSans Light";
-	font-size: 20px;
+* {
+    margin: 0;
+    padding: 0;
 }
 
 a{
-	text-decoration: none;
-	color:white;
-	cursor: pointer;
+    color: white;
+    text-decoration: none;
+}
+body {
+    font-family: gotham;
+    color: white;
+}
 
+.menu_button{
+    width: 100px;
+    border-radius:10px;
+    border: none;
+    cursor: pointer;
+    height:50px;
+    color:white;
+    background-color: transparent;
+    border: 2px solid white;
+    transition: 0.5s;
+}
+.menu_button:hover{
+    color: #70d774;
+    border: 2px solid #70d774;
+    transition: 0.2s;
+}
+.menu_mobile{
+    width: 100px;
+    border-radius:10px;
+    border: none;
+    cursor: pointer;
+    height:50px;
+    color:white;
+    background-color: transparent;
+    border: 2px solid white;
+}
+.menu_mobile:hover{
+    color: #70d774;
+    border: 2px solid #70d774;
+    transition: 0.2s;
+}
+.scrollLayer{
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 70px;
+    height: 70px;
+    background-image:url('photo/uparrow.png');
+    background-size: cover;
+    background-position: center;
+    cursor: pointer;
+    z-index: 2;
+}
+#return{
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    width: 70px;
+    height: 70px;
+    background-image:url('photo/square.png');
+    background-size: cover;
+    background-position: center;
+    cursor: pointer;
+    z-index: 101;
+    transition: 5s;
+}
+#return:hover{
+    background-image:url('photo/squarepick.png');
+    background-size: cover;
+    background-position: center;
+}
+/*Navigation - dodatkowe puste klasy majace na celu rozrozniac sekcje*/
+.Strona_glowna{font-size:12px}
+.Info{font-size:12px}
+.Zdjecia{font-size:12px}
+.Kontakt{font-size:12px}
+.cointainer {
+    width: 100%;
+    min-height: 100vh;
+    background:wheat;
+    background-size: cover;
+    background-position: center;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
+    background-attachment: fixed;
+}
+.cointainerStop{
+    position: absolute;
+    max-height: 100vh;
+    z-index: 10;
+    display: block;
+    overflow: hidden;
+    
+}
+#Layer_Menu {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    background-color: wheat;
+    height: 50px;
+    z-index: 2;
+    color:white;
+}
+
+nav {
+    visibility: hidden;
 }
 
 
-/*INDEX*/
-#CONTAINER {
-	width: 100%;
-	min-height: 100vh;
-	background-color: wheat;
-	display: flex;
-	flex-wrap: wrap;
-	flex-direction: column;
-	overflow-x: hidden;
-	margin: auto;
-	color: black;
-	align-items: center;
+#photo {
+    height: 100vh;
+    width: 100%;
+    background-color: white;
+    background-image: url('foto/pliki_glowne/background.png');
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
+    align-items: center;
+    display: flex;
+    
 }
-.fontimportant
-{
-	font-family: gotham !important;
-	font-size: 25px;
+#textOn{
+    margin-top: 12vh;
+    font-size: 27px;
+    font-family: 'Times New Roman', Times, serif !important;
+    color:black;
+    padding: 10px;
+    border: 1px solid #000;
 }
-#LAYER {
-	display: flex;
-	background-color: transparent;
-	z-index: 2;
-	height: 0px;
+#img img{
+    width: 51px;
+    height: 55px;
 }
-
-.LOGO {
-	left: 1px;
-	margin-top: 1px;
+.Layer_Center {
+    height: 500px;
+    width: 90%;
+    margin:auto;
+    background-color: transparent;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    padding: 10px 0px;
 }
-.LOGO img {
-	width: 40px;
-	height: 25px;
-}
-.PHOTO{
-	background-image: url("foto/pliki_glowne/background.png");
-	background-size: cover;
-	display: flex;
-	flex-direction: column;
-	top: 0px;
-	transition: 0;
-	align-items: center;
-	min-height: 100vh;
-	width: 100vw;
-	justify-content: center;
-}
-.BOX {
-	line-height: 1.9;
-	font-family: Arial;
-	letter-spacing: 0.049em;
-	font-size: 19px;
-	padding: 5px;
-	width: 90%;
-	background-color: transparent;
-	border-radius: 25px;
-	margin: 21px 0px;
-}
-.BOXPHOTO {
-
-	position: absolute;
-	right: 70px;
-	
-}
-.BOXPHOTO img{
-	width: 50px;
-	height: 50px;	
-}
-.BOXTITLEFIELD {
-	text-align: center;
-	font-size: 35px;
-	border:#1a1819 solid 5px;
-	width: 50%;
+#row {
+    width: 100%;
+    margin:auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.BOXDESCRIPTION
-{
-	display: flex;
-	align-items: center;	
+#Main_Text{
+    font-size: 27px;
+    padding: 0 50px;
 }
+.Description_Text{
+    font-size: 25px;
+    width: 90%;
+    margin:auto;
+    display: flex;
+    line-height: 1.9;
+    letter-spacing: 0.049em;
 
-.BOXDESCRIPTIVEFIELD {
-	text-align: justify;
 }
-.FOOTER{
-	min-height: 100vh !important;
+.script {
+    display: flex;
+    justify-content: center;
+    font-size: 150px !important;
 }
-.FOOTERINFO{
-	
+.navigation {
+    color:black;
 }
-.FOOTERINFO IMG{
-	width:37px;
-	height: 37px;
-	transform: translateY(20%);
+.navigation_list{
+    font-size: 27px;
+    justify-content: space-around;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
-@media (min-width: 700px) {
-	#CONTAINER {
-		overflow: hidden;
-	}
+.field{
+    overflow:scroll !important;
+    position: fixed;
+    min-height: 100vh;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    transition: 200ms ease-in-out;
+    border: 1px solid black;
+    border-radius: 10px;
+    z-index: 10;
+    background-color: white;
+    width: 70%;
+    --gap:15px;
+    --num-cols:3;
+    --row-height:250px;
+    box-sizing: border-box;
+    padding: var(--gap);
+    display: grid;
+    grid-template-columns: repeat(var(--num-cols), 1fr);
+    max-height: 100vh;
+    gap: var(--gap);
+    top: 50%;
+    transition: 1.2s;
+    
+}
+.activefield{
+    transform: translate(-50%, -50%) scale(1) !important;
 
+}
+  
 
-
-	#LAYER {
-		
-	}
-
-
-	.INDEX_paseklogo {
-		padding: 10px;
-		left: 1px;
-	}
-
-	.INDEX_paseklogo img {
-		width: 40px;
-		height: 25px;
-		z-index: 2;
-	}
-
-	.INDEX_pasekmenu {
-		right: 50%;
-		position: absolute;
-		text-align: center;
-		max-height: 100%;
-		z-index: 2;
-	}
-
-	.BOX {
-		position: relative;
-
-	}
-
-
-
+.field > img {
+object-fit: cover;
+  max-width: 100%;
+  max-height: 100%;
+  overflow: hidden;
+}
+.foto{
+    width: 100%;
+    justify-content: center;
+    display: flex;
+    padding: 15px;
+}
+.openfoto:hover{
+    border-radius: 0%;
+    transition: 0.5s;
+}
+.openfoto{
+    width: 450px;
+    height: 450px;
+    background-image:url('photo/zopen.png');
+    background-size: cover;
+    background-position: center;
+    cursor: pointer;
+    z-index: 2;
+    border-radius: 50%;
 }
 
 
 
+#Information{
+    height: 210px;
+    width: 100%;
+    background-color: transparent;
+    color:white;
+}
+#Info{
+    width: 210px;
+    height: 200px;
+}
+#Inf{
+    width: 210px;
+    height: 21px;
+    padding: 21px;
+    display: flex;
+    justify-content: space-between;
+}
+@media (min-width: 1100px) {
+    .cointainer {
+        position: relative;
+        margin: 0px;
+        max-width: 100%;
+    }
+    #Layer_Menu {
+        height: 72px;
+    }
+    #_Menu
+    {
+        display: flex;
+        flex-direction: row;
+    }
+    nav{
+        visibility: visible;
+    }
+    nav ul li {
+        padding: 0px 20px;
+        display: flex;
+        flex-direction: row;
+        text-align: center;
+        width: 100%;
+    }
+    
+    nav ul li a {
+        color: white;
+        text-decoration: none;
+    }
+    
+    nav ul li a:hover {
+        text-decoration: none;
+        color: lime;
+        cursor: pointer;
+    }
+    .MENU{
+        visibility: hidden;
+    }
+    #photo {
+        background-color: white;
+        background-image: url('photo/flowerwet.png');
+        background-size: cover;
+        background-position: center;
+        background-repeat:no-repeat;
+        background-position: center center;
+        overflow: hidden;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+        image-rendering: -webkit-optimize-contrast;
+    }
+    #textOn
+    {
+        margin-top: 22vh;
+        font-size: 72px;
+    }
+    #img img{
+        width: 51px;
+        height: 55px;
+    }
+    .Layer_Center {
+        height: 500px;
+        width: 90%;
+        margin:auto;
+        background-color: transparent;
+        display: flex;
+        justify-content:center;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+    }
+    #Main_Text{
+        font-size: 51px;
+        padding: 0 50px;
+    }
+    .Description_Text{
+        font-size: 31px;
+        width: 50%;
+    }
+    #row {
+        width: 50%;
+    }
 
+
+
+
+
+    
+    
+
+}
