--- a/css/animation.css
+++ b/css/animation.css
@@ -14,7 +14,7 @@
 	transition: transform .3s .1s ease-in-out;
 }  
 .MENU_CLICKED {
-	transform: translatex(150px);
+	transform: translatex(270px);
 }  
 .HAMBURGER_MENU {
 	width: 25px;
@@ -26,7 +26,7 @@
 .HAMBURGER_CLICK {
 	width: 100%;
 	height: 5px;
-	background-color: gold;
+	background-color: white;
 	position:absolute;
 	left: 0;
 	top: 50%;
@@ -38,7 +38,7 @@
 	content: '';
 	width: 100%;
 	height: 5px;
-	background-color: gold;
+	background-color: white;
 	position:absolute;
 	left: 0;
 	transition: transform .2s .2s ease-in-out;
@@ -68,7 +68,6 @@
     opacity: 0.5;
 	left: 0;
 	transform: translateX(-250px);
-	
     
 }
 .navigation--active {
@@ -81,3 +80,9 @@
 .navigation__item {
 	margin-bottom: 20px;
 }
+
+
+
+
+
+
