--- a/css/animation.css
+++ b/css/animation.css
@@ -26,7 +26,7 @@
 .HAMBURGER_CLICK {
 	width: 100%;
 	height: 5px;
-	background-color: white;
+	background-color: black;
 	position:absolute;
 	left: 0;
 	top: 50%;
@@ -38,7 +38,7 @@
 	content: '';
 	width: 100%;
 	height: 5px;
-	background-color: white;
+	background-color: black;
 	position:absolute;
 	left: 0;
 	transition: transform .2s .2s ease-in-out;
