--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,7 @@ body {
 /*Navigation - dodatkowe puste klasy majace na celu rozrozniac sekcje*/
 .Strona_glowna{font-size:12px}
 .Info{font-size:12px}
+.Pho{position: absolute;top:-500px;}
 .Zdjecia{font-size:12px}
 .Kontakt{font-size:12px}
 .cointainer {
@@ -86,7 +87,6 @@ body {
     background-size: cover;
     background-position: center;
     overflow-x: hidden;
-    overflow-y: scroll;
     display: flex;
     flex-direction: column;
     background-attachment: fixed;
@@ -115,7 +115,7 @@ nav {
 }
 
 
-#photo {
+.photo {
     height: 100vh;
     width: 100%;
     background-color: white;
@@ -140,7 +140,7 @@ nav {
     height: 55px;
 }
 .Layer_Center {
-    height: 50%;
+    min-height: 100vh;
     width: 90%;
     margin:auto;
     background-color: transparent;
@@ -149,9 +149,6 @@ nav {
     align-items: center;
     display: flex;
     flex-direction: column;
-    padding: 10px 0px;
-    background: wheat;
-    padding: 15px;
 }
 #row {
     width: 100%;
@@ -269,12 +266,15 @@ object-fit: cover;
 }
 @media (min-width: 1100px) {
     .cointainer {
-        position: relative;
+        position: absolute;
         margin: 0px;
-        max-width: 100%;
+        max-height: 100vh;
+        overflow: hidden;
     }
     #Layer_Menu {
         height: 72px;
+        position: fixed;
+        top:0px;
     }
     #_Menu
     {
@@ -305,7 +305,8 @@ object-fit: cover;
     .MENU{
         visibility: hidden;
     }
-    #photo {
+    .photo {
+        position: absolute;
         background-repeat:no-repeat;
         background-position: center center;
         -webkit-background-size: cover;
