--- a/css/animation.css
+++ b/css/animation.css
@@ -9,12 +9,14 @@
 	background-color: transparent;
 	border: 0;
 	margin: 0;
+	position: fixed;
+	z-index: 51515;
 }  
 .MENU, .navigation {
 	transition: transform .3s .1s ease-in-out;
 }  
 .MENU_CLICKED {
-	transform: translatex(270px);
+	transform: translatex(0px);
 }  
 .HAMBURGER_MENU {
 	width: 25px;
@@ -61,13 +63,14 @@
 .navigation {
     position:fixed !important;
 	min-height: 100vh;
-	width: 250px;
+	width: 100%;
 	background-color: black;
 	position: absolute;
 	top: 0;
     opacity: 0.5;
 	left: 0;
-	transform: translateX(-250px);
+	transform: translateX(-100%);
+	z-index: 51;
     
 }
 .navigation--active {
