--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ body {
     right: 20px;
     width: 70px;
     height: 70px;
-    background-image:url('photo/uparrow.png');
+    background-image:url('foto/icons/uparrow.png');
     background-size: cover;
     background-position: center;
     cursor: pointer;
@@ -68,7 +68,6 @@ body {
     background-position: center;
     cursor: pointer;
     z-index: 101;
-    transition: 5s;
 }
 #return:hover{
     background-image:url('photo/squarepick.png');
@@ -119,7 +118,7 @@ nav {
     height: 100vh;
     width: 100%;
     background-color: white;
-    background-image: url('foto/pliki_glowne/background.png');
+    background-image: url('foto/main/table.png');
     background-size: cover;
     background-position: center;
     overflow: hidden;
@@ -128,12 +127,22 @@ nav {
     
 }
 #textOn{
-    margin-top: 12vh;
+    position: absolute;
+    bottom: 10px;
+    width: 10%;
     font-size: 27px;
     font-family: 'Times New Roman', Times, serif !important;
     color:black;
     padding: 10px;
     border: 1px solid #000;
+    transition: width 1s ease-out 100ms
+}
+#textOn:hover{
+    width: 20%;
+    display: flex;
+    justify-content: center;
+
+    
 }
 #img img{
     width: 51px;
@@ -153,7 +162,7 @@ nav {
 .fotoU{
     width: 210px;
     height: 210px;
-    background-image:url('photo/zopen.png');
+    background-image:url('foto/icons/photo.png');
     background-size: cover;
     background-position: center;
     cursor: pointer;
@@ -169,15 +178,16 @@ nav {
 
 #Main_Text{
     font-size: 27px;
-    padding: 0;
+    padding: 0px;
 }
 .Description_Text{
-    font-size: 25px;
+    font-size: 15px;
     width: 100%;
     margin:auto;
     display: flex;
     line-height: 1.9;
     letter-spacing: 0.049em;
+    padding: 100px 0px;
 
 }
 .script {
@@ -326,7 +336,6 @@ object-fit: cover;
     }
     #textOn
     {
-        margin-top: 22vh;
         font-size: 72px;
     }
     #img img{
@@ -349,6 +358,7 @@ object-fit: cover;
     .Description_Text{
         font-size: 31px;
         width: 50%;
+        padding: 0px;
         
     }
     #row {
