--- a/css/style.css
+++ b/css/style.css
@@ -129,20 +129,19 @@ nav {
 #textOn{
     position: absolute;
     bottom: 10px;
-    width: 10%;
+    width: 20%;
     font-size: 27px;
     font-family: 'Times New Roman', Times, serif !important;
     color:black;
     padding: 10px;
     border: 1px solid #000;
-    transition: width 1s ease-out 100ms
-}
-#textOn:hover{
-    width: 20%;
+    transition: width 1s ease-out 100ms;
     display: flex;
     justify-content: center;
-
-    
+}
+#textOn:hover{
+    width: 40%;
+     
 }
 #img img{
     width: 51px;
@@ -174,11 +173,49 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 15px 0px;
 }
 
 #Main_Text{
     font-size: 27px;
     padding: 0px;
+}
+.PB{
+    width: 350px;
+    height: 3em;
+    background-color: transparent;
+    border-radius: 0%;
+    align-items: center;
+    display: flex;
+    padding: 0px 0.5em;
+}
+.PBEM{
+    position: relative;
+    width: 100%;
+    background-color: white;
+    z-index: 1;
+    height: 2em;
+    border-radius: 0%;
+}
+.PBNO{
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    width: 0%;
+    height: 2em;
+    min-width: 2rem;
+    max-width: calc(100%);
+    background-color: green;
+    border-radius: 0%;
+    position: relative;
+    transition: width 2s ease-out 200ms;
+    z-index: 2;
+}
+.PBN:hover{
+    width: 100%;
+}
+.PBTE{
+color:#70d774;
 }
 .Description_Text{
     font-size: 15px;
